@@ -1,3 +1,13 @@
+2003-07-16  Jacob Smullyan  <smulloni@smullyan.org>
+
+	* SkunkWeb/Services/templating/SafeSpoolTag.py: modified to use
+	DT.DTCompilerUtil.safe_import.
+
+	* pylibs/DT/DTCompilerUtil.py (safe_import): added utility
+	function for importing a module into the hidden namespace.
+	(Output.writelines): utility function for writing several lines
+	with one function call.
+
 2003-07-08  Jacob Smullyan  <smulloni@smullyan.org>
 
 	* docs/stmlrefer/stmlrefer.tex (section{\texttt{<:spool:>}}): 
